# cddlib

./: .DS_Store.1  ._ChangeLog  .gitignore  .gitmodules  .travis.yml  AUTHORS  ChangeLog  ChangeLog (Autosaved)  HISTORY.cdd  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.core2processor  README.libcdd  README.md  README.whatsnew  TODO  aclocal.m4  cdd.c  cdd.h  cdd_test1.c  cdd_test2.c  cddarith.c  cddgmp.pc.in  cddio.c  cddlib.c  cddlib.h  cddlib.pc.in  cddlibman.aux  cddlibman.bbl  cddlibman.blg  cddlibman.dvi  cddlibman.tex  cddmathlink.c  cddmlio.c  cddmlio.h  cddtypes.h  (+17 more)
.github/: pull_request_template.md
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: .DS_Store.1  ._cddlibman.tex  .gitignore  Makefile.am  cddlibman.aux  cddlibman.bbl  cddlibman.blg  cddlibman.dvi  cddlibman.ps  cddlibman.tex  cddlibman.toc  html.sty
examples/: bug45.ine  bug45res.ine  project1.ine  project2.ine  project2res.ine  sampleh4.ine  samplelp.ine  samplelp.testlp1_gmp_output  samplelp.testlp1_output  samplelp_big.ine  samplelp_big_dualinfeas.ine
examples-ext/: ccp6.ext  irbox200-4.ext  reg600-5.ext
examples-ine/: ._infeas.ine  allzero.ine  cross10.ine  cross12.ine  cross6.ine  cross8.ine  kkd18_4.ine  kkd27_5.ine  kkd38_6.ine  lpmintest.ine  redtest56085_4.ine  sampleh4.ine  samplelp.ine
examples-ine3d/: cube3.ine  grcubocta.ine  icododeca.ine  rcubocta.ine
examples-ml/: Combinatorica5.m  ExtendGraphics30.tar  IOPolyhedra.m  PolytopeSkeleton.m  README.cddmathlink  UnfoldPolytope.m  cddml-DietProblem.ma  cddml-DietProblem.nb  cddml-PolytopeSkeleton.nb  cddml-Zonotope.m  cddml-Zonotope.mb  cddml-Zonotope.nb  cddml-notebook.nb
ext/: ccc4.ext  ccc5.ext  ccc6.ext  ccp4.ext  ccp5.ext  ccp6.ext  cyclic16-10.ext  irbox20-4.ext  irbox200-4.ext  prodst62.ext  reg24-5.ext  reg600-5.ext
ine/: cube10.ine  cube12.ine  cube6.ine  cube8.ine  cubocta.ine  ex1.ine  infeas.ine  integralpoints.ine  lpmaxtest.ine  nonfull.ine  origin.ine  reg24-5.ine  verifyinput2.ine
ine_3d/: cube3.ine  dodeca.ine  grcubocta.ine  hexocta.ine  icododeca.ine  rcubocta.ine  rhomtria.ine
lib-src/: ._cdd.h  ._cddcore.c  ._cddio.c  ._cddlib.c  ._cddlp.c  ._cddmp.c  ._cddmp.h  ._cddtypes.h  .gitignore  Makefile  Makefile.am  Makefile.gmp.am  Makefile.in  cdd.h  cddcore.c  cddio.c  cddlib.c  cddlp.c  cddmp.c  cddmp.h  cddproj.c  cddtypes.h  setoper.c  setoper.h  splitmix64.h
lib-src-gmp/: Makefile  Makefile.am  Makefile.in  cdd.h  cdd_f.h  cddcore.c  cddcore_f.c  cddio.c  cddio_f.c  cddlib.c  cddlib_f.c  cddlp.c  cddlp_f.c  cddmp.c  cddmp.h  cddmp_f.c  cddmp_f.h  cddproj.c  cddproj_f.c  cddtypes.h  cddtypes_f.h  debugmem.h  mathlink.h.v1.6  setoper.c  setoper.h
lib-src-gmp/.deps/: cddcore.Po  cddcore_f.Po  cddio.Po  cddio_f.Po  cddlib.Po  cddlib_f.Po  cddlp.Po  cddlp_f.Po  cddmp.Po  cddmp_f.Po  cddproj.Po  cddproj_f.Po  setoper.Po
lib-src/.deps/: cddcore.Po  cddio.Po  cddlib.Po  cddlp.Po  cddmp.Po  cddproj.Po
m4/: .gitignore
makedir/: Makefile  Makefile.085  Makefile.090  Makefile092  cdd.c  cdd.h  cdd_test1.c  cdd_test2.c  cddarith.c  cddcore.c  cddio.c  cddlib.c  cddlib.h  cddlp.c  cddmathlink.c  cddmathlink.tm  cddmlio.c  cddmlio.h  cddmp.c  cddmp.h  cddtypes.h  cross10.ext  dplex.c  dplex.h  dplex_test1.c  dplex_test2.c  dplex_test3.c  lcdd.c  libtest1.ine  libtest2.ine  libtesta.ext  libtestb.ext  redcheck.c  sample.ine  sampleh1.ine  sampleh2.ine  sampleh3.ine  sampleh4.ine  sampleh5.ine  sampleh6.ine  (+18 more)
mma/: cddml-PolytopeSkeleton.ma  cddml-Zonotope.ma  cddml-notbook.ma  cddml-partionpoly.ma  cddml-partionpoly.mb
news/: fix-canonicalize-segfault.rst  fix-pc.rst  fix-sredundant.rst  header.rst  issue45.rst  parameter-names.rst  resolve-memory-leak.rst  thread_safety.md  version.rst
src/: .gitignore  Makefile  Makefile.am  Makefile.gmp.am  Makefile.in  adjacency.c  allfaces.c  cdd.h  cddarith.c  cddcore.c  cddexec.c  cddio.c  cddlib.c  cddlp.c  cddmathlink.c  cddmathlink.tm  cddmlio.c  cddmlio.h  cddmp.c  cddmp.h  cddtypes.h  fourier.c  lcdd.c  makedist  minkowski.c  projection.c  redcheck.c  redexter.c  redundancies.c  redundancies_clarkson.c  sample.ine  sampleh5.ine  sampleh8.ine  samplelp1.ine  samplelp3.ine  samplelp4.ine  samplev3.ext  scdd.c  setoper.c  setoper.h  (+9 more)
src-gmp/: .gdb_history  .gitignore  Makefile  Makefile.am  Makefile.in  adjacency.c  allfaces.c  cdd_both_reps.c  cddmathlink.tm  cddmlio.h  fourier.c  projection.c  redundancies.c  redundancies_clarkson.c  simplecdd.c  testcdd2.c  testlp1.c  testlp3.c  testuniq.c
src-gmp/.deps/: adjacency.Po  allfaces.Po  fourier.Po  lcdd.Po  projection.Po  redcheck.Po  simplecdd.Po  testcdd1.Po  testcdd2.Po  testlp1.Po  testlp2.Po  testlp3.Po  testshoot.Po
src-mathlink/: INSTALL  Makefile  cddmathlink.c  cddmlio.h  mathlink.h
src-mathlink2/: .gdb_history  INSTALL  Makefile  cddmathlink.c  cddmathlink.tm  cddml-DietProblem2.m  cddml-DietProblem2.nb  cddml-PolytopeSkeleton2.nb  cddml-Zonotope.nb  cddmlio.c  cddmlio.h
src/.deps/: adjacency.Po  allfaces.Po  fourier.Po  lcdd.Po  projection.Po  redcheck.Po  simplecdd.Po  testcdd1.Po  testcdd2.Po  testlp1.Po  testlp2.Po  testlp3.Po  testshoot.Po
