bin_PROGRAMS = scdd \
lcdd \
redcheck \
fourier \
projection \
adjacency \
allfaces \
testcdd1 \
testshoot \
testcdd2 \
testlp1 \
testlp2 \
testlp3 \
minkowski \
redexter \
redundancies \
redundancies_clarkson
# testuniq does not build currently
# testuniq

LDADD = ../lib-src/libcdd.la
AM_CPPFLAGS = -I../lib-src

include ./Makefile.gmp.am
